(v7.0) You can now give starter kits via command blocks.